--- a/ejemplo1.html
+++ b/ejemplo1.html
@@ -6,7 +6,15 @@
     <title>Document</title>
 </head>
 <body>
+
+
+
+
+
     Hola a todos ......
     sdsdsdsdasdasdasdasdsada
+   estoy enfadado porque tengo muchas responsabilidades,xddd
+
+
 </body>
 </html> 
